--- a/src/components/renderedResult.css
+++ b/src/components/renderedResult.css
@@ -5,12 +5,13 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    box-shadow: 0.1rem 0.1em 0.3rem rgb(0, 0, 0, 0.1);
+    box-shadow: 0.15rem 0.15em 0.3rem rgb(0, 0, 0, 0.1);
     gap: 0.4rem;
+    padding-bottom: 2.5rem;
   }
 
   .resultHeaderBox {
-    background-color: rgb(0, 0, 100);
+    background-color: rgb(0, 0, 59);
     color: white;
     width: 100%;
     display: flex;
