--- a/src/components/renderedResult.css
+++ b/src/components/renderedResult.css
@@ -33,3 +33,56 @@
     align-items: center;
     margin-bottom: 1.8rem;
   }
+
+  .resultEducationBox
+  {
+    width: 100%;
+    margin-top: 0.6rem;
+    margin-bottom: 0.2rem;
+  }
+
+  .resultEducationBoxTitle {
+    background-color: rgb(0, 0, 59);
+    color: white;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem 0;
+    font-size: 1.8rem;
+    font-weight: bolder;
+  }
+
+  .resultEducationBoxList {
+    padding: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    gap: 0.8rem;
+  }
+
+  .resultJobsBox
+  {
+    width: 100%;
+    margin-bottom: 0.2rem;
+  }
+
+  .resultJobsBoxTitle {
+    background-color: rgb(0, 0, 59);
+    color: white;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem 0;
+    font-size: 1.8rem;
+    font-weight: bolder;
+  }
+
+  .resultJobBoxList {
+    padding: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    gap: 0.8rem;
+  }
